Fix collapsed rotate animation

--- a/src/styles/namespaces/Contact/Content.scss
+++ b/src/styles/namespaces/Contact/Content.scss
@@ -18,51 +18,25 @@
         }
       }
 
-      @include animation(ct-Content_title 1s ease 2s);
+      @include animation(ct-Content_title 1s ease 1s);
     }
 
     &_bar {
       display: block;
       @include keyframes(ct-Content_bar) {
-        0% {
+        from {
           @include bar-side-active(#FF7A52, #80FF52);
-          position: absolute;
-          margin: auto;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
           transform: rotate(90deg);
         }
 
-        50% {
+        to {
           @include bar-side-active(#FF7A52, #80FF52);
-          position: absolute;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          margin: auto;
           transform: rotate(0deg);
-        }
-
-        99% {
-          @include bar-side-active(#FF7A52, #80FF52);
-          position: absolute;
-          top: -515px;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          margin: auto;
-        }
-        
-        100% {
-          @include bar-side-active(#FF7A52, #80FF52);
         }
       }
 
-      @include animation(ct-Content_bar 2s);
-    }
+      @include animation(ct-Content_bar 1s);
+   }
 
     &_category {
       margin-top: 80px;
@@ -79,7 +53,7 @@
         }
       }
 
-      @include animation(ct-Content_description-category 1s ease 2s);
+      @include animation(ct-Content_description-category 1s ease 1s);
     }
 
     &_description {
@@ -102,7 +76,7 @@
           }
         }
 
-        @include animation(ct-Content_description-image 1s ease 2s);
+        @include animation(ct-Content_description-image 1s ease 1s);
       }
 
       &-kyash {
@@ -119,7 +93,7 @@
           }
         }
 
-        @include animation(ct-Content_description-kyash 1s ease 2s);
+        @include animation(ct-Content_description-kyash 1s ease 1s);
       }
     }
   }
