--- a/src/styles/namespaces/Contact/Footer.scss
+++ b/src/styles/namespaces/Contact/Footer.scss
@@ -20,7 +20,7 @@
         }
       }
 
-      @include animation(ct-Footer_column 1s ease 2s);
+      @include animation(ct-Footer_column 1s ease 1s);
     }
   }
 }
